--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@tailwindcss/typography": "^0.5.7",
-    "nuxt": "^3.2.0"
+    "nuxt": "^3.2.0",
+    "nuxt-gtag": "^0.5.7"
   }
 }
