--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "@tailwindcss/typography": "^0.5.7",
     "nuxt": "^3.2.0",
     "nuxt-gtag": "^0.5.7"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
