--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@tailwindcss/typography": "^0.5.7",
     "nuxt": "^3.2.0"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
