--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@tailwindcss/typography": "^0.5.7",
     "nuxt": "^3.2.0"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "dependencies": {
+    "vue-gtag-next": "^1.14.0"
+  }
 }
