--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@tailwindcss/typography": "^0.5.7",
-    "nuxt": "^3.2.0"
+    "nuxt": "^3.6.1",
+    "nuxt-simple-robots": "^3.0.2",
+    "nuxt-simple-sitemap": "^3.0.9"
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
