--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@tailwindcss/typography": "^0.5.7",
     "nuxt": "^3.6.1",
-    "nuxt-simple-robots": "^3.0.2",
-    "nuxt-simple-sitemap": "^3.0.9"
+    "nuxt-simple-robots": "^3.0.2"
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
