--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@nuxt/content": "^2.2.1",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@tailwindcss/typography": "^0.5.7",
-    "nuxt": "^3.2.0"
+    "nuxt": "^3.2.0",
+    "nuxt-simple-robots": "^3.0.2",
+    "nuxt-simple-sitemap": "^3.0.11"
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
